wrap fix

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -610,7 +610,7 @@ nav {
 	}
 
 	@media screen and (max-width: 768px) {
-		margin-top: 0 !important;
+		margin-top: 20px;
 		margin-bottom: 50px;
 	}
 
